# incentive-societies-61c5

./: README.md  REPORT.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml
logs/: research_prompt.txt  session_instructions.txt
results/analysis/: advantage_stats.csv  analysis_config.json
results/raw/: audit_penalty_grid.csv  bias_sweep.csv  profiles.csv  summary.json
src/research_workspace/: analyze.py  experiments.py  simulation.py  visualize.py
